--- a/partials/projects/logical-frame-indicator.html
+++ b/partials/projects/logical-frame-indicator.html
@@ -4,20 +4,39 @@
 <div class="modal-body">
 	<form class="form-horizontal" role="form" name="planningForm" novalidate>
 
-		<fieldset>
-			<legend>Indicateur</legend>
-			
-			<ui-select ng-model="indicator.indicatorId" theme="bootstrap" ng-disabled="disabled">
-				<ui-select-match placeholder="Choisissez un indicateur">{{$select.selected.name}}</ui-select-match>
-				<ui-select-choices repeat="indicator._id as indicator in indicators | filter:{name:$select.search}">
-					<span>{{indicator.name}}</span>
-				</ui-select-choices>
-			</ui-select>
-			<br/>
-		</fieldset>
+		<div ng-if="!container.indicator">
+			<legend>Choisissez un indicateur</legend>
 
-		<fieldset>
-			<legend>Données additionelles</legend>
+			<div class="indicator-level-1" ng-repeat="(themeId, indicatorByTypes) in indicatorHierarchy" ng-if="!container.indicator">
+				<div class="indicator-header" ng-click="open1 = !open1">
+					<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open1, 'fa-minus-circle': open1}"></i>
+					{{themes[themeId].name || 'Sans thématique'}}
+				</div>
+
+				<div class="indicator-level-2" ng-repeat="(typeId, indicators) in indicatorByTypes" ng-if="open1">
+					<div class="indicator-header" ng-click="open2 = !open2">
+						<i class="fa fa-plus-circle" ng-class="{'fa-plus-circle': !open2, 'fa-minus-circle': open2}"></i>
+						{{types[typeId].name || 'Sans type'}}
+					</div>
+
+					<div class="indicator-level-3" ng-repeat="indicator in indicators" ng-if="open2">
+						<span class="color" ng-class="{green: indicator.standard}"></span>
+						<span class="name">{{indicator.name}} ({{indicator.main}} suivis, {{indicator.dependency}} dépendances, {{indicator.input}} saisies)</span>
+						<a ng-click="container.indicator=indicator">Choisir</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div ng-if="container.indicator">
+			<legend>Édition</legend>
+	
+			<div class="form-group">
+				<label for="relevance-input" class="col-sm-2 control-label">Indicateur</label>
+				<div class="col-sm-10">
+					<input type="text" ng-model="container.indicator.name" class="form-control" disabled />
+				</div>
+			</div>
 
 			<div class="form-group" show-errors>
 				<label for="relevance-input" class="col-sm-2 control-label">Pertinence</label>
@@ -142,25 +161,18 @@
 					</div>
 				</div>
 			</div>
-
-		</fieldset>
-
+		</div>
 	</form>
 </div>
+
 <div class="modal-footer">
 
-	<button ng-click="update()"
-			ng-disabled="planningForm.$invalid || isUnchanged()"
-			class="btn btn-primary">
-		Ajouter
-	</button>
-
-	<button ng-click="reset()"
-			ng-disabled="isUnchanged()"
-			class="btn btn-default">
-		Réinitialiser
-	</button>
-
-	<button ng-click="" class="btn btn-danger">Retirer</button>
-
+	<div ng-if="container.indicator">
+		<button ng-click="add()" ng-disabled="planningForm.$invalid || isUnchanged()" class="btn btn-primary" ng-if="container.isNew">Ajouter</button>
+		<button ng-click="save()" ng-disabled="planningForm.$invalid || isUnchanged()" class="btn btn-primary" ng-if="!container.isNew">Sauvegarder</button>
+		<button ng-click="delete()" class="btn btn-danger" ng-if="!container.isNew">Retirer</button>
+	</div>
+	<div ng-if="!container.indicator">
+		<button ng-click="cancel()" class="btn btn-default">Annuler</button>
+	</div>
 </div>
