--- a/partials/projects/reporting.html
+++ b/partials/projects/reporting.html
@@ -27,14 +27,14 @@
 			<div class="form-group">
 				<label for="indicator" class="col-sm-2 control-label">Date de début</label>
 				<div class="col-sm-10">
-					<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" />
+					<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
 				</div>
 			</div>
 			
 			<div class="form-group">
 				<label for="indicator" class="col-sm-2 control-label">Date de fin</label>
 				<div class="col-sm-10">
-					<input type="month" class="form-control" ng-model="end" ng-change="updateData()" />
+					<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
 				</div>
 			</div>
 
