--- a/partials/projects/input-entities.html
+++ b/partials/projects/input-entities.html
@@ -16,7 +16,7 @@
 				<thead>
 					<tr>
 						<th>Nom</th>
-						<th></th>
+						<th style="width:225px"></th>
 					</tr>
 				</thead>
 				<tbody>
