--- a/partials/projects/input-groups.html
+++ b/partials/projects/input-groups.html
@@ -16,9 +16,9 @@
 			<table class="table table-bordered table-stripped table-condensed">
 				<thead>
 					<tr>
-						<th>Nom</th>
+						<th style="width:250px">Nom</th>
 						<th>Membres</th>
-						<th></th>
+						<th style="width:225px"></th>
 					</tr>
 				</thead>
 				<tbody>
