--- a/partials/indicators/theme-list.html
+++ b/partials/indicators/theme-list.html
@@ -15,14 +15,14 @@
 				<tr>
 					<th>Nom</th>
 					<th>Nombre d'indicateurs</th>
-					<th></th>
+					<th style="width:85px"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="theme in themes | orderBy: 'name'">
 					<td>{{theme.name}}</td>
-					<td>{{usage[theme._id] || 0}}</td>
-					<td><button class="btn btn-danger btn-xs" ng-disabled="usage[theme._id]" ng-click="remove(theme)">Supprimer</button></td>
+					<td>{{theme.usage || 0}}</td>
+					<td><button class="btn btn-danger btn-xs" ng-disabled="theme.usage" ng-click="remove(theme)">Supprimer</button></td>
 				</tr>
 				<tr>
 					<td colspan="3">
