--- a/partials/projects/list.html
+++ b/partials/projects/list.html
@@ -4,22 +4,22 @@
 <table class="table table-bordered table-stripped table-condensed">
 	<thead>
 		<tr>
+			<th style="width: 30px"></th>
 			<th><a ng-click="pred = 'name'; rev = !rev">Nom</a></th>
 			<th><a ng-click="pred = 'begin'; rev = !rev">Début</a></th>
 			<th><a ng-click="pred = 'end'; rev = !rev">Fin</a></th>
-			<th></th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr ng-repeat="project in projects | orderBy:pred:rev">
-			<td>{{project.name}}</td>
-			<td>{{project.begin}}</td>
-			<td>{{project.end}}</td>
+			<td><i class="fa" ng-class="{'fa-star': offline[project._id], 'fa-star-o': !offline[project._id]}"></i></td>
 			<td>
-				<a href="#projects/{{project._id}}" class="btn btn-default btn-xs">
-					Modifier
+				<a href="#projects/{{project._id}}">
+					{{project.name}}
 				</a>
 			</td>
+			<td>{{project.begin}}</td>
+			<td>{{project.end}}</td>
 		</tr>
 	</tbody>
 </table>
