--- a/partials/indicators/edit.html
+++ b/partials/indicators/edit.html
@@ -184,7 +184,7 @@
 				<button class="btn btn-warning"
 						ng-disabled="isUnchanged()"
 						ng-click="reset()">
-					Réinitialiser
+					Annuler les modifications
 				</button>
 				
 				<button class="btn btn-danger"
