--- a/partials/projects/form-edit.html
+++ b/partials/projects/form-edit.html
@@ -140,7 +140,7 @@
 
 			<br/>
 			<button ng-click="save()" ng-disabled="formForm.$invalid || isUnchanged()" class="btn btn-primary">Sauvegarder</button>
-			<button ng-click="reset()" class="btn btn-default">Réinitialiser</button>
+			<button ng-click="reset()" class="btn btn-default">Annuler les modifications</button>
 		</form>
 	</div>
 </div>
