--- a/partials/projects/list.html
+++ b/partials/projects/list.html
@@ -11,7 +11,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="project in projects | orderBy:pred:rev">
+		<tr ng-repeat="project in projects | filter:isFinished | orderBy:pred:rev">
 			<td><i class="fa" ng-class="{'fa-star': offline[project._id], 'fa-star-o': !offline[project._id]}"></i></td>
 			<td>
 				<a href="#projects/{{project._id}}">
