--- a/partials/projects/logical-frame.html
+++ b/partials/projects/logical-frame.html
@@ -255,7 +255,7 @@
 			<br/><br/>
 
 			<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary">Sauvegarder</button>
-			<button ng-click="reset()" class="btn btn-default">Réinitialiser</button>
+			<button ng-click="reset()" class="btn btn-default">Annuler les modifications</button>
 		</form>
 
 	</div>
