--- a/partials/projects/input-groups.html
+++ b/partials/projects/input-groups.html
@@ -44,7 +44,7 @@
 							</ui-select>
 						</td>
 						<td>
-							<button class="btn btn-default btn-sm">Voir les statistiques</button>
+							<button class="btn btn-default btn-sm" ng-click="stats(inputGroup.id)">Voir les statistiques</button>
 							<button class="btn btn-danger btn-sm" ng-click="delete(inputGroup.id)">Supprimer</button>
 						</td>
 					</tr>
@@ -59,7 +59,7 @@
 			</table>
 
 			<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary">Sauvegarder</button>
-			<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default">Réinitialiser</button>
+			<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default">Annuler les modifications</button>
 
 		</form>
 	</div>
