--- a/partials/projects/reporting.html
+++ b/partials/projects/reporting.html
@@ -54,7 +54,7 @@
 				<label for="display-input" class="col-sm-2 control-label">Afficher</label>
 				<div class="col-sm-10">
 					<select class="form-control" id="display-input" ng-model="display">
-						<option value="display">Valeures</option>
+						<option value="display">Valeurs</option>
 						<option value="totalPart">Pourcentage du total</option>
 						<option value="targetPart">Pourcentage de l'objectif</option>
 						<option value="baselinePart">Pourcentage de la baseline</option>
