--- a/partials/projects/form-edit.html
+++ b/partials/projects/form-edit.html
@@ -119,7 +119,9 @@
 								<i class="fa fa-times" style="color: red" ng-hide="indicatorsById[indicatorId].sumAllowed"></i>
 							</td>
 							<td>{{indicatorsById[indicatorId].name}}</td>
-							<td><div contenteditable ng-model="field.source"></div></td>
+							<td>
+								<input type="text" ng-model="field.source" class="form-control" />
+							</td>
 							<td>
 								<div class="btn-group">
 									<button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
