--- a/partials/indicators/reporting.html
+++ b/partials/indicators/reporting.html
@@ -1,12 +1,9 @@
-<style>
+<style type="text/css">
+
 	table {
 		font-size: 12px;
 	}
-	.small {
-		font-size: 12px;
-		font-weight: bold;
-		line-height: 12px;
-	}
+
 </style>
 
 <div class="row">
@@ -22,77 +19,91 @@
 			<li class="active">Statistiques</li>
 		</ol>
 
-		<form class="form-horizontal well well-sm" novalidate>
-			<div class="form-group">
-				<label for="indicator" class="col-sm-2 control-label">Date de début</label>
-				<div class="col-sm-10">
-					<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
-				</div>
-			</div>
-			
-			<div class="form-group">
-				<label for="indicator" class="col-sm-2 control-label">Date de fin</label>
-				<div class="col-sm-10">
-					<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
-				</div>
-			</div>
+		<form class="form-horizontal" novalidate>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="indicator" class="col-sm-2 control-label">Début</label>
+						<div class="col-sm-10">
+							<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="group-by-input" class="col-sm-2 control-label">Colonnes</label>
+						<div class="col-sm-10">
+							<select class="form-control" id="group-by-input" ng-model="groupBy" ng-change="updateData()">
+								<option value="month">Mois</option>
+								<option value="year">Année</option>
+							</select>
+						</div>
+					</div>
 
-			<div class="form-group">
-				<label for="group-by-input" class="col-sm-2 control-label">Colonnes</label>
-				<div class="col-sm-10">
-					<select class="form-control" id="group-by-input" ng-model="groupBy" ng-change="updateData()">
-						<option value="month">Mois</option>
-						<option value="year">Année</option>
-					</select>
+					<div class="form-group">
+						<label for="colorize-input" class="col-sm-2 control-label">Colorer</label>
+						<div class="col-sm-10">
+							<p class="form-control-static">
+								<input type="checkbox" id="colorize-input" ng-model="colorize" />
+							</p>
+						</div>
+					</div>
 				</div>
-			</div>
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="indicator" class="col-sm-2 control-label">Fin</label>
+						<div class="col-sm-10">
+							<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
+						</div>
+					</div>
 
-			<div class="form-group">
-				<label for="display-input" class="col-sm-2 control-label">Afficher</label>
-				<div class="col-sm-10">
-					<select class="form-control" id="display-input" ng-model="display">
-						<option value="value">Valeurs</option>
-						<option value="targetPart">Pourcentage de la cible</option>
-						<option value="baselinePart">Pourcentage de la baseline</option>
-					</select>
-				</div>
-			</div>
+					<div class="form-group">
+						<label for="display-input" class="col-sm-2 control-label">Afficher</label>
+						<div class="col-sm-10">
+							<select class="form-control" id="display-input" ng-model="display">
+								<option value="value">Valeurs</option>
+								<option value="targetPart">Pourcentage de la cible</option>
+								<option value="baselinePart">Pourcentage de la baseline</option>
+							</select>
+						</div>
+					</div>
 
-			<div class="form-group">
-				<label for="colorize-input" class="col-sm-2 control-label">Colorer</label>
-				<div class="col-sm-10">
-					<p class="form-control-static">
-						<input type="checkbox" id="colorize-input" ng-model="colorize" />
-					</p>
+					<div class="form-group">
+						<label for="plot-input" class="col-sm-2 control-label">Grapher</label>
+						<div class="col-sm-10">
+							<p class="form-control-static">
+								<input type="checkbox" id="plot-input" ng-model="plot" />
+
+							</p>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</form>
 
-<!--
-	<div class="well well-sm">
-		<nvd3-multi-bar-chart
-			data="reportingData"
-			id="showControlsExample"
-			showXAxis="true"
-			showYAxis="true"
-			width="800"
-			height="300">
+		<div class="clearfix">
+			<button
+				class="btn btn-primary btn-xs pull-right"
+				ng-show="plot"
+				ng-click="downloadGraph()">Télécharger le graphique</button>
+		</div>
 
-			<svg style="width: 100%; height:300px;"></svg>
-			
-		</nvd3-multi-bar-chart>
-	</div>
--->
+		<div id="chart" ng-show="plot"></div>
+
+		<button class="btn btn-primary btn-xs pull-right"
+				ng-click="downloadCSV()"
+				style="margin-bottom: 10px;">Télécharger le tableau</button>
 
 		<table class="table table-bordered table-stripped table-condensed" ng-init="purposeOpen=true">
 			<thead>
 				<tr>
+					<th ng-show="plot"></th>
 					<th></th>
 					<th ng-repeat="col in cols">{{col.name}}</th>
 				</tr>
 			</thead>
 			<tbody ng-repeat="project in projects" ng-init="open=false;">
-				<tr class="small">
+				<tr>
+					<td ng-show="plot"><input id="plot-{{project._id}}" type="checkbox" ng-model="plots[project._id]" ng-change="updateGraph(project._id)" /></td>
 					<td>
 						<a ng-click="open=!open">
 							<i class="fa" ng-class="{'fa-minus-circle': open, 'fa-plus-circle': !open}"></i>
@@ -108,8 +119,9 @@
 					</td>
 				</tr>
 				<tr ng-repeat="inputEntity in project.inputEntities" ng-if="open">
+					<td ng-show="plot"><input id="plot-{{inputEntity.id}}" type="checkbox" ng-model="plots[inputEntity.id]" ng-change="updateGraph(inputEntity.id)" /></td>
 					<td>
-						&nbsp;&nbsp;&nbsp;&nbsp;{{inputEntity.name}}
+						<label for="plot-{{inputEntity.id}}">&nbsp;&nbsp;&nbsp;&nbsp;{{inputEntity.name}}</label>
 					</td>
 					<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][inputEntity.id][indicator._id] ? (colorize ? data[col.id][inputEntity.id][indicator._id].color : white) : '#eee'}">
 						<div ng-switch="display" ng-if="data[col.id][inputEntity.id][indicator._id] !== undefined">
