--- a/partials/projects/reporting.html
+++ b/partials/projects/reporting.html
@@ -2,11 +2,25 @@
 	table {
 		font-size: 12px;
 	}
-	.small {
-		font-size: 12px;
-		font-weight: bold;
-		line-height: 12px;
+
+	table label {
+		font-weight: normal;
 	}
+
+	table .section, table .section a {
+		color: black;
+		text-decoration: underline;
+		font-weight: bold;
+	}
+
+	table .indent1 {
+		padding-left: 25px !important;
+	}
+
+	table .indent2 {
+		padding-left: 50px !important;
+	}
+
 </style>
 
 <div class="row">
@@ -24,86 +38,100 @@
 			<li class="active" ng-if="entity">Lieu d'activité: {{entity.name}}</li>
 		</ol>
 
-		<form class="form-horizontal well well-sm" novalidate>
+		<form class="form-horizontal" novalidate>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="indicator" class="col-sm-2 control-label">Début</label>
+						<div class="col-sm-10">
+							<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
+						</div>
+					</div>
 
-			<div class="form-group">
-				<label for="indicator" class="col-sm-2 control-label">Date de début</label>
-				<div class="col-sm-10">
-					<input type="month" class="form-control" ng-model="begin" ng-change="updateData()" required />
-				</div>
-			</div>
-			
-			<div class="form-group">
-				<label for="indicator" class="col-sm-2 control-label">Date de fin</label>
-				<div class="col-sm-10">
-					<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
-				</div>
-			</div>
+					<div class="form-group">
+						<label for="group-by-input" class="col-sm-2 control-label">Colonnes</label>
+						<div class="col-sm-10">
+							<select class="form-control" id="group-by-input" ng-model="groupBy" ng-change="updateData()">
+								<option value="month">Mois</option>
+								<option value="year">Année</option>
+								<option value="entity">Lieux d'activité</option>
+								<option value="group">Groupe d'activité</option>
+							</select>
+						</div>
+					</div>
 
-			<div class="form-group">
-				<label for="group-by-input" class="col-sm-2 control-label">Colonnes</label>
-				<div class="col-sm-10">
-					<select class="form-control" id="group-by-input" ng-model="groupBy" ng-change="updateData()">
-						<option value="month">Mois</option>
-						<option value="year">Année</option>
-						<option value="entity">Lieux d'activité</option>
-						<option value="group">Groupe d'activité</option>
-					</select>
+					<div class="form-group">
+						<label for="colorize-input" class="col-sm-2 control-label">Colorer</label>
+						<div class="col-sm-10">
+							<p class="form-control-static">
+								<input type="checkbox" id="colorize-input" ng-model="colorize" />
+							</p>
+						</div>
+					</div>
 				</div>
-			</div>
+				
+				<div class="col-md-6">
+					<div class="form-group">
+						<label for="indicator" class="col-sm-2 control-label">Fin</label>
+						<div class="col-sm-10">
+							<input type="month" class="form-control" ng-model="end" ng-change="updateData()" required />
+						</div>
+					</div>
 
-			<div class="form-group">
-				<label for="display-input" class="col-sm-2 control-label">Afficher</label>
-				<div class="col-sm-10">
-					<select class="form-control" id="display-input" ng-model="display">
-						<option value="value">Valeurs</option>
-						<option value="targetPart">Pourcentage de la cible</option>
-						<option value="baselinePart">Pourcentage de la baseline</option>
-					</select>
-				</div>
-			</div>
-
-			<div class="form-group">
-				<label for="colorize-input" class="col-sm-2 control-label">Colorer</label>
-				<div class="col-sm-10">
-					<p class="form-control-static">
-						<input type="checkbox" id="colorize-input" ng-model="colorize" />
-					</p>
+					<div class="form-group">
+						<label for="display-input" class="col-sm-2 control-label">Afficher</label>
+						<div class="col-sm-10">
+							<select class="form-control" id="display-input" ng-model="display">
+								<option value="value">Valeurs</option>
+								<option value="targetPart">Pourcentage de la cible</option>
+								<option value="baselinePart">Pourcentage de la baseline</option>
+							</select>
+						</div>
+					</div>
+					
+					<div class="form-group">
+						<label for="plot-input" class="col-sm-2 control-label">Grapher</label>
+						<div class="col-sm-10">
+							<p class="form-control-static">
+								<input type="checkbox" id="plot-input" ng-model="plot" />
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</form>
 
-<!-- 		<div class="well well-sm">
-			<nvd3-multi-bar-chart
-				data="reportingData"
-				id="showControlsExample"
-				showXAxis="true"
-				showYAxis="true"
-				width="800"
-				height="300">
+		<div class="clearfix">
+			<button
+				class="btn btn-primary btn-xs pull-right"
+				ng-show="plot"
+				ng-click="downloadGraph()">Télécharger le graphique</button><br/>
+		</div>
 
-				<svg style="width: 100%; height:300px;"></svg>
-				
-			</nvd3-multi-bar-chart>
-		</div> -->
+		<div id="chart" ng-show="plot" style="overflow: hidden;"></div>
+
+		<button class="btn btn-primary btn-xs pull-right"
+				ng-click="downloadCSV()"
+				style="margin-bottom: 10px;">Télécharger le tableau</button>
 
 		<table class="table table-bordered table-stripped table-condensed" ng-init="purposeOpen=true">
 			<thead>
 				<tr>
+					<th ng-show="plot"></th>
 					<th></th>
 					<th ng-repeat="col in cols">{{col.name || col}}</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="small">
-					<td colspan="{{cols.length + 1}}">
+				<tr>
+					<td ng-show="plot"></td>
+					<td class="section" colspan="{{cols.length + 1}}">
 						OG: {{project.logicalFrame.goal}}
 					</td>
 				</tr>
 				<tr ng-repeat="indicatorId in project.logicalFrame.indicators">
-					<td>
-						{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}
-					</td>
+					<td ng-show="plot"><input id="plot-{{indicatorId}}" type="checkbox" ng-model="plots[indicatorId]" ng-change="updateGraph(indicatorId)" /></td>
+					<td><label for="plot-{{indicatorId}}">{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}</label></td>
 					<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
 						<span ng-switch="display" ng-if="data[col.id][indicatorId]">
 							<span ng-switch-when="value">{{data[col.id][indicatorId].value}}{{indicatorsById[indicatorId].unit}}</span>
@@ -114,9 +142,9 @@
 				</tr>
 			</tbody>
 			<tbody ng-repeat-start="purpose in project.logicalFrame.purposes" ng-init="purposeId=$index;purposeOpen=true;">
-				<tr class="small">
-					<td colspan="{{cols.length + 1}}">
-						&nbsp;&nbsp;&nbsp;&nbsp;
+				<tr>
+					<td ng-show="plot"></td>
+					<td class="section indent1" colspan="{{cols.length + 1}}">
 						<a ng-click="purposeOpen=!purposeOpen">
 							<i class="fa" ng-class="{'fa-minus-circle': purposeOpen, 'fa-plus-circle': !purposeOpen}"></i>
 							OS.{{purposeId+1}}: {{purpose.description}}
@@ -124,10 +152,17 @@
 					</td>
 				</tr>
 				<tr ng-repeat="indicatorId in purpose.indicators" ng-if="purposeOpen">
-					<td>
-						&nbsp;&nbsp;&nbsp;&nbsp;{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}
+					<td ng-show="plot">
+						<input id="plot-{{indicatorId}}"
+							   type="checkbox"
+							   ng-model="plots[indicatorId]"
+							   ng-change="updateGraph(indicatorId)" />
 					</td>
-
+					<td class="indent1">
+						<label for="plot-{{indicatorId}}">
+							{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}
+						</label>
+					</td>
 					<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
 						<span ng-switch="display" ng-if="data[col.id][indicatorId]">
 							<span ng-switch-when="value">{{data[col.id][indicatorId].value}}{{indicatorsById[indicatorId].unit}}</span>
@@ -138,9 +173,9 @@
 				</tr>
 			</tbody>
 			<tbody ng-repeat="output in purpose.outputs" ng-init="outputOpen=true" ng-if="purposeOpen">
-				<tr class="small">
-					<td colspan="{{cols.length + 1}}">
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<tr>
+					<td ng-show="plot"></td>
+					<td class="section indent2" colspan="{{cols.length + 1}}">
 						<a ng-click="outputOpen=!outputOpen">
 							<i class="fa" ng-class="{'fa-minus-circle': outputOpen, 'fa-plus-circle': !outputOpen}"></i>
 							R.{{purposeId+1}}.{{$index+1}}: {{output.description}}
@@ -148,8 +183,13 @@
 					</td>
 				</tr>
 				<tr ng-repeat="indicatorId in output.indicators" ng-if="outputOpen">
-					<td>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}
+					<td ng-show="plot">
+						<input id="plot-{{indicatorId}}" type="checkbox" ng-model="plots[indicatorId]" ng-change="updateGraph(indicatorId)" />
+					</td>
+					<td class="indent2">
+						<label for="plot-{{indicatorId}}">
+							{{indicatorsById[indicatorId].name || 'Indicateur inconnu'}}
+						</label>
 					</td>
 					<td ng-repeat="col in cols" ng-style="{'background-color': data[col.id][indicatorId] ? (colorize ? data[col.id][indicatorId].color : 'white') : '#eeeeee'}">
 						<span ng-switch="display" ng-if="data[col.id][indicatorId]">
